--- a/resources/css/inputs.css
+++ b/resources/css/inputs.css
@@ -1,3 +1,3 @@
 .input{
-    @apply w-full px-3 py-1 outline-none mt-2 border border-gray-400 outline-none rounded-md shadow-md placeholder:text-gray-400;
+    @apply w-full px-3 py-1 outline-none mt-2 border border-gray-400 rounded-md shadow-md placeholder:text-gray-400;
 }
